syntax = "proto3";
package crabidy.v1;

service LibraryService {
  rpc GetLibraryNode(GetLibraryNodeRequest) returns (GetLibraryNodeResponse);
  rpc GetTrack(GetTrackRequest) returns (GetTrackResponse);
}

// To signal whether it's loading data (for frontend only probably -
// could also be used for fetching from providers?)
enum LibraryNodeState {
  LIBRARY_NODE_STATE_UNSPECIFIED = 0;
  LIBRARY_NODE_STATE_PENDING = 1;
  LIBRARY_NODE_STATE_DONE = 2;
}

message Album {
  string title = 1;
  optional string release_date = 2;
}

message Artist {
  string name = 1;
}

message Track {
  // Including provider
  string uuid = 1;
  string artist = 2;
  string title = 3;
  optional uint32 duration = 4;
}

message LibraryNode {
  // Including provider
  string uuid = 1;
  string name = 2;
  repeated string children = 3;
  optional string parent = 4;
  LibraryNodeState state = 5;
  repeated Track tracks = 6;
  bool is_queable = 7;
}

message GetLibraryNodeRequest {
  string uuid = 1;
}

message GetLibraryNodeResponse {
  LibraryNode node = 1;
}

message GetTrackRequest {
  string uuid = 1;
}

message GetTrackResponse {
  Track track = 1;
}
